Perfundimi i about us
Perfundimi dhe validimi me js

--- a/Home.css
+++ b/Home.css
@@ -7,7 +7,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed; 
-    height: 70vh;
+    height: 518px;
     display: flex;
     color: white;
     font-family: "Times New Roman", Times, serif;
