--- a/Kontakti.css
+++ b/Kontakti.css
@@ -1,137 +1,154 @@
 
 
-    *{
-      margin: 0;
-    }
-    
-    .main{
-      display: flex;
-      flex-direction: row;
-      width: 70%;
-      margin-left: 15%;
-  
-    }
-    .teksti{
-      color: white;
-      font-size: larger;
-    }
-    .teksti p{
-      justify-content: center;
-     font-size: 25px;
-     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-     margin-top: 20px;
-     margin-left: 30px;
-     margin-right: 30px;
-    }
-    .teksti h1{
-      margin-top: 110px;
-      font-size: 60px;
-      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-      margin-left: 30px;
-    }
-    footer{
-      color: grey;
-      display: flex;
-      width: 80%; 
-      margin-left: 11.2%;
-      justify-content: space-between;
-      margin-top: 42px;
-      margin-bottom: 42px;
-  }
-  .footerlist{
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      list-style: none;
-      justify-content: space-between;
-  }
-  .linkedin{
-      width: 120px;
-      filter: grayscale(100%);
-  }
-  .linkedin:hover{
-      filter: grayscale(0%);
-      width: 130px;
-  }
-  .footerunderline{
-      text-decoration-line:none ;
-      padding: 5px;
-  }
-  .footerunderline li{
-    padding-left: 20px;
-  }
-  .b{
-    height: 518px;
-    background-color: rgb(159, 201, 217);
-  }
-  .inputat{
-    margin-top: 60px;
-  }
-  .inputat input{
-    width: 250px;
-    height: 40px;
-    border-radius: 5px;
-    border: 0;
-    margin: 20px;
-    margin-left: 15%;
-  }
-  .textarea{
-    margin: 20px;
-    margin-left: 15%;
-  }
-  textarea{
-    width: 250px;
-    border: 0;
-    border-radius: 5px;
-    height: 100px;
-    max-width: 400px;
-    max-height: 150px;
-    min-width: 80px;
-    min-height: 50px;
-  }
-  .teksti input{
-    margin-left: 16%;
-    width: 130px;
-    height: 40px;
-    margin-top: 80px;
-    border: 0;
-    border-radius: 5px;
-  }
-  .teksti input:hover{
-    width: 140px;
-    height: 42px;
-  }
-  @media only screen and (max-width: 1250px) {
-     .teksti p{
-      font-size: 17px;
-      margin-left: 0;
-      margin-left: -20%;
-     }
-     .teksti h1{
-      font-size: 20px;
-      margin-left: -20%;
-     }
-  }
-  
-  @media only screen and (max-width: 850px) {
-    .underline{
-      font-size: 7px;
-      margin-left: 3px;
-    }
-      .asd{
-        display: none;
-    }
-    .inputat input{
-      width: 120px;
-    }
-    textarea{
-      width: 120px;
-    }
-    .teksti input{
-      margin-left: -20%;
-    }
-    .arrow{
-      width: 20px;
-      height: 20px;
-    }
-  }
+*{
+  margin: 0;
+}
+
+.main{
+  display: flex;
+  flex-direction: row;
+  width: 70%;
+  margin-left: 15%;
+
+}
+.teksti{
+  color: white;
+  font-size: larger;
+}
+.teksti p{
+  justify-content: center;
+ font-size: 25px;
+ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+ margin-top: 20px;
+ margin-left: 30px;
+ margin-right: 30px;
+}
+.teksti h1{
+  margin-top: 110px;
+  font-size: 60px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin-left: 30px;
+}
+footer{
+  color: grey;
+  display: flex;
+  width: 80%; 
+  margin-left: 11.2%;
+  justify-content: space-between;
+  margin-top: 42px;
+  margin-bottom: 42px;
+}
+.footerlist{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  list-style: none;
+  justify-content: space-between;
+}
+.linkedin{
+  width: 120px;
+  filter: grayscale(100%);
+}
+.linkedin:hover{
+  filter: grayscale(0%);
+  width: 130px;
+}
+.footerunderline{
+  text-decoration-line:none ;
+  padding: 5px;
+}
+.footerunderline li{
+padding-left: 20px;
+}
+.b{
+height: 518px;
+background-color: rgb(159, 201, 217);
+}
+.inputat{
+margin-top: 60px;
+}
+.inputat input{
+width: 250px;
+height: 40px;
+border-radius: 5px;
+border: 0;
+margin: 20px;
+margin-left: 15%;
+}
+.textarea{
+margin: 20px;
+margin-left: 15%;
+}
+textarea{
+width: 250px;
+border: 0;
+border-radius: 5px;
+height: 100px;
+max-width: 250px;
+max-height: 50px;
+min-width: 80px;
+min-height: 50px;
+}
+
+.textarea input{
+  color: gray;
+  border: 0px; 
+  width: 150px; 
+  height: 30px;
+  background-color: white;
+  border-radius: 5px; 
+  margin-top: 30px;
+  margin-left: 10%;
+}
+
+.textarea input:hover{
+  cursor: pointer;
+}
+
+.teksti input{
+margin-left: 16%;
+width: 130px;
+height: 40px;
+margin-top: 80px;
+border: 0;
+border-radius: 5px;
+}
+.teksti input:hover{
+width: 140px;
+height: 42px;
+}
+@media only screen and (max-width: 1250px) {
+ .teksti p{
+  font-size: 17px;
+  margin-left: 0;
+  margin-left: -20%;
+ }
+ .teksti h1{
+  font-size: 20px;
+  margin-left: -20%;
+ }
+}
+
+@media only screen and (max-width: 850px) {
+.underline{
+  font-size: 7px;
+  margin-left: 3px;
+}
+  .asd{
+    display: none;
+}
+.inputat input{
+  width: 120px;
+}
+textarea{
+  width: 120px;
+}
+.teksti input{
+  margin-left: -20%;
+}
+.textarea input{
+  width: 120px;
+  margin-left: -2px;
+}
+
+}
